fix selectboxes in designview flickering when being opened due to changing width

--- a/frontend/app/less/designview/editdocument.less
+++ b/frontend/app/less/designview/editdocument.less
@@ -168,10 +168,6 @@
   }
 }
 
-.typesetter-obligatory-option {
-  width: 220px;
-}
-
 .text-field-placement-setter-field-name {
   width: 223px;
 
